# nessie

./: .clang-format  .clang-tidy  .gitignore  README.md  flake.nix  meson.build  meson.options  shell.nix
core/: cpu.c  cpu.h  ines.c  ines.h  mapper.c  mapper.h  meson.build  nes.c  nes.h  scheduler.c  scheduler.h  util.c  util.h
data/: 2C02G_U_wiki.pal
desktop/: main.c  meson.build
desktop/frontend/: common.h  raylib.c
disasm/: main.c  meson.build
src/: cpu.c  cpu.h  error.c  error.h  ines.c  main.c  mapper.c  mapper.h  meson.build  nes.c  nes.h  util.c  util.h
src/frontend/: common.c  common.h  raylib.c
